--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <nav>
-      <a href="#"><span>WEB</span>STUDIO</a>
+      <a href="./index.html"><span>WEB</span>STUDIO</a>
       <ul>
         <li><a href="#">Studio</a></li>
         <li><a href="#">Portfolio</a></li>
@@ -30,6 +30,7 @@
       <button type="button">Order Service</button>
     </section>
     <section>
+      <h2>Strategy</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -53,22 +54,22 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
+          <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="images/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
+          <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260">
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
+          <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
+          <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
@@ -76,7 +77,7 @@
     </section>
   </main>
   <footer>
-    <a href="#"><span>WEB</span>STUDIO</a>
+    <a href="./index.html">WEBSTUDIO</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
 </body>
